@@ -1,3 +1,6 @@
+May 30, 2023
+  OboFileCreator: changed the way dbxrefs in definitions are generated
+
 May 23, 2023
   updated CL source to CL release v2023-05-22
 
